[FIX] web,website,portal:  Fix the text colour contrast over background
In this PR,
1. Simplified overridden value of `$min-contrast-ratio` by removing it in the portal module. ( it is already in the web module )
2. Reduced `$min-contrast-ratio` to 2.9 to solve the inconsistency with the previous version 15.0 of text colour over the background colour.
3. Restored overridden of the `color-contrast` method that will now handle the transparent colour. before this commit, color-contrast function was just considering RGB value only, after this commit it will consider RGBA value.

task-3241031

--- a/addons/portal/static/src/scss/bootstrap_overridden.scss
+++ b/addons/portal/static/src/scss/bootstrap_overridden.scss
@@ -1,6 +1,3 @@
-// The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
-// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
-$min-contrast-ratio: 3 !default;
 
 //Restore BS4 Colors
 $blue: #007bff !default;
